--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <link rel="icon" href="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" type="image/icon type">
-    <title>GCR Leaderboard</title>
+    <title>GCR Leaderboard by Yash</title>
 </head>
-<body>
-<h2>GoogleCloudReady Facilitator Program Leaderboard - Mukesh Patel School of Technology Management & Engineering</h2>
-<br>
-<p>Updated on May 01 2022 | 15:06:00 IST</p>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names..">
+<body >
+    <div class="bgimg"><img</div>
+
+    <div>
+        <img class="logo" src="logo.png" alt="GDSC Logo">
+    </div>
+
+<div class="heading">
+<p class="title1">GoogleCloudReady Facilitator Program Leaderboard <br> <br> Mukesh Patel School of Technology Management & Engineering</p><br><br>
+<p>Last Updated on May 01 2022 | 15:06:00 IST</p><br>
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." style="background-color: lightgray;">
+</div> 
 <br><br>
 <table id="table">
     <thead>
