--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <link rel="icon" href="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" type="image/icon type">
-    <title>GCR Leaderboard by Yash</title>
+    <title>GCR Leaderboard</title>
 </head>
 <body >
     <div class="bgimg"><img</div>
