--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <div class="heading">
 <p class="title1">GoogleCloudReady Facilitator Program Leaderboard <br> <br> Mukesh Patel School of Technology Management & Engineering</p><br><br>
-<p>Last Updated on May 01 2022 | 15:06:00 IST</p><br>
+<p>Last Updated on May 05 2022 | 18:43:00 IST</p>
+<p>Note: Leaderboard will not update on May 06 2022 due to database maintenance</p>
+<br>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." style="background-color: lightgray;">
 </div> 
 <br><br>
