Removed GDSC Linking

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="bgimg"><img</div>
 
     <div>
-        <img class="logo" src="logo.png" alt="GDSC Logo">
+        <img class="logo" src="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" alt="Cloud icon">
     </div>
 
 <div class="heading">
