--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <link rel="icon" href="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" type="image/icon type">
     <title>GCR Leaderboard</title>
 </head>
-<body >
-    <div class="bgimg"><img</div>
+<body>
 
-    <div>
-        <img class="logo" src="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" alt="Cloud icon">
-    </div>
+    <img class="logo" src="https://play-lh.googleusercontent.com/RyoQTmHnxsxPYabsETmWVXHtLorVh_yOO48hsdv2VmI-Uki4qt5c5vV1cicJODV56A4" alt="Cloud icon">
+    
 
 <div class="heading">
 <p class="title1">GoogleCloudReady Facilitator Program Leaderboard <br> <br> Mukesh Patel School of Technology Management & Engineering</p><br><br>
-<p>Last Updated on May 05 2022 | 18:43:00 IST</p>
+<p class="para">Last Updated on May 05 2022 | 18:43:00 IST</p>
 <p>Note: Leaderboard will not update on May 06 2022 due to database maintenance</p>
 <br>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." style="background-color: lightgray;">
