--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="heading">
 <p class="title1">GoogleCloudReady Facilitator Program Leaderboard <br> <br> Mukesh Patel School of Technology Management & Engineering</p><br><br>
 <p class="para">Last Updated on May 05 2022 | 18:43:00 IST</p>
-<p>Note: Leaderboard will not update on May 06 2022 due to database maintenance</p>
+<p>Note: This webpage is now being updated. Any infomration showed here may not be updated.</p>
 <br>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." style="background-color: lightgray;">
 </div> 
